--- a/assets/yamls/menus.yaml
+++ b/assets/yamls/menus.yaml
@@ -1,10 +1,9 @@
-'Dashboard':
 'Projects':
   - 'Manage Projects':
     - 'Create a New Project'
     - 'View / Edit Project'
 'Roadmap':
-  - 'Manage Roamap Items':
+  - 'Manage Roadmap Items':
     - 'Add (OR Import) a new Roadmap Item'
 'Settings':
   - 'Onboarding':
