sections must have sub menus

--- a/assets/yamls/menus.yaml
+++ b/assets/yamls/menus.yaml
@@ -4,6 +4,8 @@
     - 'Edit Project'
 'Roadmap':
   - 'Roadmap OKRs':
+    - 'Roadmap OKRs'
+    - 'Add a new Roadmap OKR'
   - 'Manage Roadmap Items':
     - 'Roadmap Items'
     - 'Add a new Roadmap Item'
